@@ -7,6 +7,7 @@ Class::Usul       = v0.41.0
 File::DataClass   = v0.35.0
 Moo               = 1.004002
 Net::DBus         = v1.0.0
+Try::Tiny         = 0.22
 Unexpected        = 0.22.1
 
 [Prereqs / ConfigureRequires]
